infrastructure/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lldap
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lldap
          image: ghcr.io/lldap/lldap:stable
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data
