infrastructure/lldap/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lldap
  namespace: lldap
spec:
  serviceName: lldap
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
        app.kubernetes.io/name: lldap
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:stable
          ports:
            - containerPort: 17170
              protocol: TCP
            - containerPort: 389
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
