infrastructure/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lldap
  ports:
    - name: http
      port: 17170
      targetPort: 17170
    - name: ldap
      port: 389
      targetPort: 389
